--- a/dissertation/proposal.tex
+++ b/dissertation/proposal.tex
@@ -194,7 +194,8 @@ analysis of the effects of each instruction of the Dalvik VM, and through
 testing. Special attention will need to be given to correct 
 instrumentation of the exception mechanism, which will require static 
 analysis of the location of exception-throwing instructions and 
-corresponding try/catch blocks.
+corresponding try/catch blocks, utilising knowledge from the Optimising
+Compilers course.
 
 In the minimal version of the project, the desktop application consisting of
 Java instrumenting application and shell scripts) will interact with the user
